TpyshUtils 方法进行重写